--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,6 @@
 PORT = 3000
-MONGO_URI=mongodb+srv://<admin>:<admin123>@cluster0.ltxu4.mongodb.net/storybooks?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://daniya:admin@cluster0.22jeh.mongodb.net/storybooks?retryWrites=true&w=majority
+
+GOOGLE_CLIENT_ID=371451555236-os8vqa5ja70ilnepijkhulga0821b6r9.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET=KJ0B5Lhd557uJONnoUIvz0hF
