--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "description": "application to create and share stories",
     "main": "index.js",
     "scripts": {
-        "start": "cross-env NODE_ENV=production node app",
+        "start": "cross-env NODE_ENV=production nodemon app",
         "dev": "cross-env NODE_ENV=development nodemon app"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "connect-mongo": "^4.4.1",
+        "connect-mongodb-session": "^2.4.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.0",
