--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,5 @@
 PORT = 3000
-MONGO_URI=mongodb+srv://admin:admin@Cluster0.22jeh.mongodb.net/storybooks?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://myusername:mypassword@Cluster0.22jeh.mongodb.net/storybooks?retryWrites=true&w=majority
 
 GOOGLE_CLIENT_ID=371451555236-os8vqa5ja70ilnepijkhulga0821b6r9.apps.googleusercontent.com
 
