--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "application to create and share stories",
     "main": "index.js",
     "scripts": {
-        "start": "cross-env NODE_ENV=production nodemon app",
-        "dev": "cross-env NODE_ENV=development nodemon app"
+        "start": "node app.js"
+
     },
     "author": "",
     "license": "ISC",
