--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://admindaniya:admin@Cluster0.ltxu4.mongodb.net/storybooks?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://<username>:<password>@Cluster0.ltxu4.mongodb.net/storybooks?retryWrites=true&w=majority
 
 GOOGLE_CLIENT_ID=371451555236-os8vqa5ja70ilnepijkhulga0821b6r9.apps.googleusercontent.com
 
